SET(LIB_NAME osgVerseAI)
SET(LIBRARY_INCLUDE_FILES RecastManager.h)
SET(LIBRARY_FILES ${LIBRARY_INCLUDE_FILES}
    RecastManager.cpp RecastManager_Builder.h RecastManager_Builder.cpp)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/3rdparty/recastnavigation/Detour)

NEW_LIBRARY(${LIB_NAME} STATIC)
TARGET_LINK_LIBRARIES(${LIB_NAME} osgVerseDependency osgVerseModeling)
TARGET_COMPILE_OPTIONS(${LIB_NAME} PUBLIC -D_SCL_SECURE_NO_WARNINGS)

INSTALL(TARGETS ${LIB_NAME} EXPORT ${LIB_NAME}
        RUNTIME DESTINATION ${INSTALL_BINDIR} COMPONENT libosgverse
        LIBRARY DESTINATION ${INSTALL_LIBDIR} COMPONENT libosgverse
        ARCHIVE DESTINATION ${INSTALL_ARCHIVEDIR} COMPONENT libosgverse-dev)
INSTALL(FILES ${LIBRARY_INCLUDE_FILES} DESTINATION ${INSTALL_INCDIR}/osgVerse/animation COMPONENT libosgverse-dev)
