SET(LIB_NAME osgVerseAI)
SET(LIBRARY_INCLUDE_FILES RecastManager.h McpServer.h)
SET(LIBRARY_FILES ${LIBRARY_INCLUDE_FILES}
    RecastManager.cpp RecastManager_Private.h
    RecastManager_Builder.cpp RecastManager_Builder.h
    McpServer.cpp)

INCLUDE_DIRECTORIES(../3rdparty/recastnavigation/Detour)
INCLUDE_DIRECTORIES(../3rdparty/libhv ../3rdparty/libhv/all
                    ../3rdparty/stb ../3rdparty/rapidjson)
ADD_DEFINITIONS(-DHV_STATICLIB)

IF(ONNXRUNTIME_FOUND)
    SET(LIBRARY_FILES ${LIBRARY_FILES} OnnxRuntimeEngine.h OnnxRuntimeEngine.cpp)
    SET(LIBRARY_INCLUDE_FILES ${LIBRARY_INCLUDE_FILES} OnnxRuntimeEngine.h)
ENDIF(ONNXRUNTIME_FOUND)

NEW_LIBRARY(${LIB_NAME} STATIC)
TARGET_LINK_LIBRARIES(${LIB_NAME} osgVerseDependency osgVerseModeling)
TARGET_COMPILE_OPTIONS(${LIB_NAME} PUBLIC -D_SCL_SECURE_NO_WARNINGS)

IF(ONNXRUNTIME_FOUND)
    TARGET_LINK_LIBRARIES(${LIB_NAME} onnxruntime onnxruntime_providers_shared)
    IF(CUDA_FOUND)
        TARGET_LINK_LIBRARIES(${LIB_NAME} onnxruntime_providers_cuda)
        ADD_DEFINITIONS(-DVERSE_USE_CUDA=1)
    ENDIF(CUDA_FOUND)
ENDIF(ONNXRUNTIME_FOUND)

INSTALL(TARGETS ${LIB_NAME} EXPORT ${LIB_NAME}
        RUNTIME DESTINATION ${INSTALL_BINDIR} COMPONENT libosgverse
        LIBRARY DESTINATION ${INSTALL_LIBDIR} COMPONENT libosgverse
        ARCHIVE DESTINATION ${INSTALL_ARCHIVEDIR} COMPONENT libosgverse-dev)
INSTALL(FILES ${LIBRARY_INCLUDE_FILES} DESTINATION ${INSTALL_INCDIR}/osgVerse/ai COMPONENT libosgverse-dev)
